# mobilenet_test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mobilenet_classifier.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: endpoints.py
app/models/: classifier.py
app/schemas/: request_response.py
