[tool.poetry]
name = "mobilenet-test"
version = "0.1.0"
description = ""
authors = ["jy-choi <jy.choi@toss.im>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = "^2.6.0"
torchvision = "^0.21.0"
pillow = "^11.1.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
python-multipart = "^0.0.20"
opencv-python = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
